# hoghoogh-va-dastmozd

./: .gitignore  CHANGELOG.md  RELEASE_NOTES.md  pubspec.yaml
.github/workflows/: build.yml  release.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
data/: excel_discrepancies_1405.md  excel_extract_summary_1405.txt  excel_formula_inventory.csv  excel_full_extract_1405.json  excel_semantic_extract_1405.json
lib/: app_lifecycle_observer.dart  main.dart
payroll_app/: pubspec.yaml
test/: accessibility_settings_test.dart  android_expressive_nav_bar_test.dart  app_notification_test.dart  app_sidebar_test.dart  app_theme_test.dart  business_validation_test.dart  calculators_screen_structure_test.dart  dashboard_layout_test.dart  employee_batch_draft_test.dart  employee_leave_model_test.dart  floating_nav_safe_area_test.dart  home_screen_state_key_test.dart  loan_model_test.dart  loans_list_screen_structure_test.dart  mobile_compact_ui_test.dart  mouse_wheel_picker_test.dart  payment_screen_structure_test.dart  payroll_defaults_and_drafts_test.dart  period_filter_helper_test.dart  persian_date_helper_test.dart  persian_digit_input_formatter_test.dart  responsive_data_view_test.dart  salary_calculator_excel_test.dart  salary_record_update_service_test.dart  seniority_helper_test.dart  settings_screen_structure_test.dart  sick_leave_test.dart  single_instance_guard_test.dart  table_sort_preferences_test.dart  update_service_test.dart  widget_test.dart
tools/hvm_updater/: Cargo.toml
tools/hvm_updater/src/: main.rs
windows/: CMakeLists.txt
(+109 files in other folders)
