[package]
name = "hvm_updater"
version = "0.1.0"
edition = "2024"

[dependencies]
zip = { version = "8.2.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
